2008-05-23  Martin Leidig  <mleidig@schlund.de>

	Removed 'pfixcore.example' prefix from statuscodes:
	* src/de/schlund/pfixcore/testsuite/handler/Test5PageMessageHandler.java
	* src/de/schlund/pfixcore/example/TrouserHandler.java
	* src/de/schlund/pfixcore/example/bank/ihandler/LoginHandler.java
	* src/de/schlund/pfixcore/example/iwrapper/AdultInfo.iwrp
	* src/de/schlund/pfixcore/example/TShirtHandler.java
	* src/de/schlund/pfixcore/example/CounterHandler.java
	* src/de/schlund/pfixcore/example/CounterSetHandler.java
	* projects/testsuite/dyntxt/statusmessages.xml
	* projects/sample1/dyntxt/statusmessages.xml
	* projects/samplebank/dyntxt/statusmessages.xml

2008-05-21  Martin Leidig  <mleidig@schlund.de>

	Added support for authconstraint reusage. Now it's possible to
	reference top-level authconstraints from within other authconstraints
	or their nested conditions (using <authconstraint ref="..."/>).
	At runtime the reference will be resolved and replaced by the 
	authconstraint's condition.
	Added AuthAdmin MBean to list/add/revoke roles via jconsole (for
	testing).

	Modified:
	* src/de/schlund/pfixcore/auth/AuthenticationImpl.java: throw 
	RoleNotFoundException if non-exisiting role is tried to be added
	* src/de/schlund/pfixcore/auth/Authentication.java: addRole now
	throws RoleNotFoundException
	* src/de/schlund/pfixcore/auth/AuthConstraint.java: extend Condition 
	interface, added getId() and setCondition() methods
	* src/de/schlund/pfixcore/auth/AuthConstraintImpl.java: implement new
	methods from changed interface
	* src/de/schlund/pfixcore/auth/conditions/Not.java: added getter for
	contained condition
	* src/de/schlund/pfixcore/auth/conditions/ConditionGroup.java: added
	getter for contained conditions
	* src/de/schlund/pfixxml/config/impl/ContextXMLServletConfigImpl.java:
	use the same rule for all conditions, the context is detected by the
	rule itself
	* src/de/schlund/pfixxml/config/impl/AuthConstraintRule.java: trigger